--- a/asesoría.html
+++ b/asesoría.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASESORIA</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
     <H1 style="text-align: center;font-family: Arial, Helvetica, sans-serif;font-size: 35px;color: darkmagenta;"><u>ASESORIA PARA MAYOR INFORMACIÓN</u></H1>
