--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ADVISORY MOTHERS</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style2.css">
 
   </head>
 <body>
-  <center><h1>ADVISORY MOTHERS</h1> </center>
+  <center><h1><u>ADVISORY MOTHERS</u></h1> </center>
+  <center><img src="IMAGES/LOGO.jpeg" alt="" width="300px" height="280px"></center>
   <p style="text-align: center;font-size: 25px;">
     Esta plataforma forma madres con capacidad de interacción, implemento de valores con mayor conocimiento en alimentación y educación básica, con objetivos de educar correctamente a sus niños
     </p>
