--- a/juegos.html
+++ b/juegos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JUEGOS DIDACTIVOS</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
     <H1 style="text-align: left;"><u>JUEGOS DINÁMICOS</u></H1>
